# adb_mcp_bridge

./: .mcp.json  AGENTS.md  LICENSE  Makefile  README.md  adb-mcp-bridge-product-spec.md  pyproject.toml
.beads/: issues.jsonl
.beads/export-state/: a240057a074f6783.json
scripts/: check_claude_user_mcp.py  install_claude_config.py
src/adb_mcp_bridge/: server.py
tests/: test_device_discovery.py
